Add missing language hints and shorted test names